--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@apollo/react-hooks": "^3.1.2",
     "@apollo/react-ssr": "^3.1.2",
     "@charlietango/use-script": "^2.0.0",
+    "@loadable/component": "^5.10.3",
+    "@loadable/server": "^5.10.3",
     "@rehooks/component-size": "^1.0.3",
     "@sentry/browser": "^5.6.3",
     "@sentry/core": "^5.6.2",
@@ -103,7 +105,6 @@
     "react-iframe": "^1.8.0",
     "react-intersection-observer": "^8.24.2",
     "react-ionicons": "^3.0.1",
-    "react-loadable": "^5.5.0",
     "react-localize-redux": "^2.15.1",
     "react-modal": "^3.10.1",
     "react-onclickoutside": "^6.9.0",
@@ -143,6 +144,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.4.4",
+    "@loadable/babel-plugin": "^5.10.3",
+    "@loadable/webpack-plugin": "^5.7.1",
     "@svgr/webpack": "^4.3.1",
     "@testing-library/react": "^9.1.3",
     "@types/body-parser": "^1.17.1",
@@ -164,6 +167,7 @@
     "@types/styled-components": "^4.1.19",
     "@types/webpack-env": "^1.13.9",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@types/loadable__component": "^5.10.0",
     "@typescript-eslint/parser": "^2.0.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
