--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint:css": "stylelint src/**/*.css",
     "lint:deps": "depcruise -c .dependency-cruiser.js src/",
     "plop": "plop",
-    "start": "cross-env NODE_ENV=development node scripts/start.js",
+    "start:dev": "cross-env NODE_ENV=development node scripts/start.js",
+    "start": "node build/server/server.js",
     "start:analyzer": "webpack-bundle-analyzer build/client/static/bundle-stats.json",
     "test": "node scripts/test.js --env=jsdom",
     "test:update": "yarn-or-npm test --updateSnapshot",
