--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "lint:deps": "depcruise -c .dependency-cruiser.js src/",
     "plop": "plop",
     "start:dev": "cross-env NODE_ENV=development node scripts/start.js",
-    "start:node": "cross-env PORT=3000 node build/server/server.js",
-    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "start": "cross-env PORT=3000 node build/server/server.js",
+    "start:pm2": "pm2-runtime start ecosystem.config.js --env production",
     "start:analyzer": "webpack-bundle-analyzer build/client/static/bundle-stats.json",
     "test": "node scripts/test.js --env=jsdom",
     "test:update": "yarn-or-npm test --updateSnapshot",
