--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-apollo": "^3.1.2",
     "react-app-polyfill": "^1.0.3",
     "react-autosize-textarea": "^7.0.0",
+    "react-component-caching": "^1.1.1",
     "react-credit-card-input": "^1.1.5",
     "react-datepicker": "^2.9.6",
     "react-dnd": "5.0.0",
