--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "email-validator": "^1.0.7",
     "express": "^4.16.4",
     "express-manifest-helpers": "^0.6.0",
+    "express-redis-cache": "^1.1.3",
     "fs-extra": "7.0.1",
     "glob": "^7.1.4",
     "graphql": "^14.5.5",
@@ -121,6 +122,7 @@
     "react-spring": "^8.0.27",
     "react-stripe-elements": "^4.0.0",
     "react-tag-input": "^6.4.1",
+    "redis": "^2.8.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -139,7 +141,7 @@
     "@babel/core": "^7.5.0",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "@babel/plugin-transform-runtime": "^7.5.0",
