--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "lint:deps": "depcruise -c .dependency-cruiser.js src/",
     "plop": "plop",
     "start:dev": "cross-env NODE_ENV=development node scripts/start.js",
-    "start": "cross-env PORT=3000 node build/server/server.js",
-    "start:pm2": "pm2-runtime start ecosystem.config.js --env production",
+    "start:node": "cross-env PORT=3000 node build/server/server.js",
+    "start": "pm2-runtime start ecosystem.config.js --env production",
     "start:analyzer": "webpack-bundle-analyzer build/client/static/bundle-stats.json",
     "test": "node scripts/test.js --env=jsdom",
     "test:update": "yarn-or-npm test --updateSnapshot",
@@ -90,7 +90,6 @@
     "pm2": "^3.5.1",
     "qrcode.react": "^0.7.2",
     "query-string": "^6.8.3",
-    "rc-queue-anim": "^1.6.12",
     "rc-slider": "^8.6.13",
     "react": "^16.9.0",
     "react-activity": "^1.2.2",
